fix: responsive on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 20px;
+  padding: 10px;
 }
 
 .producto {
